--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -3,5 +3,7 @@
     "Products" : "Sản phẩm",
     "Cart" : "Giỏ hàng",
     "Sign in" : "Đăng nhập",
-    "Sign up" : "Đăng ký"
+    "Sign up" : "Đăng ký",
+    "Welcome" : "Chào mừng",
+    "Log out" : "Đăng xuất"
 }
