--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -5,5 +5,7 @@
     "Signin" : "Sign in",
     "Signup" : "Sign up",
     "Welcome" : "Welcome",
-    "Log out" : "Log out"
+    "Log out" : "Log out",
+    "Our hours" : "Our hours",
+    "Contact Support" : "Contact Support"
 }
