--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -5,5 +5,19 @@
     "Sign in" : "Đăng nhập",
     "Sign up" : "Đăng ký",
     "Welcome" : "Chào mừng",
-    "Log out" : "Đăng xuất"
+    "Log out" : "Đăng xuất",
+    "Our hours" : "Giờ hành chính",
+    "Contact Support" : "Hỗ trợ khách hàng",
+    "ADD TO CART" : "Giỏ hàng",
+    "Hot Products": "Sản phẩm nổi bật",
+    "All Products": "Danh sách sản phẩm",
+    "Shopping List": "Đơn hàng của bạn",
+    "Image" : "Hình ảnh",
+    "Name" : "Tên sản phẩm",
+    "Price" : "Giá tiền",
+    "Quantity" : "Số lượng",
+    "Subtotal" : "Tạm tính",
+    "Total" : "Thành tiền",
+    "Update" : "Cập nhật",
+    "Checkout" : "Thanh toán"
 }
