Localization on working

--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -19,5 +19,14 @@
     "Subtotal" : "Tạm tính",
     "Total" : "Thành tiền",
     "Update" : "Cập nhật",
-    "Checkout" : "Thanh toán"
+    "Checkout" : "Thanh toán",
+    "Bao Phat Smart Devices": "Thiết Bị Di Động Thông Minh Bảo Phát",
+    "Subcribe for more information": "Đăng ký nhận thông tin hữu ích",
+    "News & Events": "Tin tức và sự kiện",
+    "Read more": "Chi tiết",
+    "Welcome to Bao Phat Smart Devices !": "Chào mừng bạn ghé thăm cửa hàng !",
+    "Password": "Mật khẩu",
+    "Remember me": "Ghi nhớ đăng nhập",
+    "Forgot password ?": "Quên mật khẩu ?",
+    "Your Password": "Mật khẩu của bạn"
 }
