Locallization on working

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -7,5 +7,6 @@
     "Welcome" : "Welcome",
     "Log out" : "Log out",
     "Our hours" : "Our hours",
-    "Contact Support" : "Contact Support"
+    "Contact Support" : "Contact Support",
+    "User name": "Name"
 }
