--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -19,6 +19,7 @@
     "Subtotal" : "Tạm tính",
     "Total" : "Thành tiền",
     "Update" : "Cập nhật",
+    "Continue shopping": "Tiếp tục mua sắm",
     "Checkout" : "Thanh toán",
     "Bao Phat Smart Devices": "Thiết Bị Di Động Thông Minh Bảo Phát",
     "Subcribe for more information": "Đăng ký nhận thông tin hữu ích",
