Improve login, interface

--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -37,5 +37,8 @@
     "Address": "Địa chỉ",
     "Forgot password": "Quên mật khẩu",
     "Enter your email, phone number in the form below": "Xin mời nhập email, số điện thoại bạn đã đăng ký vào mẫu dưới !",
-    "Confirm": "Xác nhận"
+    "Confirm": "Xác nhận",
+    "Notes": "Chú thích",
+    "Category": "Danh mục",
+    "Add to cart": "Thêm vào giỏ"
 }
