Improve login, interface

--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -37,5 +37,31 @@
     "Address": "Địa chỉ",
     "Forgot password": "Quên mật khẩu",
     "Enter your email, phone number in the form below": "Xin mời nhập email, số điện thoại bạn đã đăng ký vào mẫu dưới !",
-    "Confirm": "Xác nhận"
+    "Confirm": "Xác nhận",
+    "Notes": "Chú thích",
+    "Category": "Danh mục",
+    "Add to cart": "Thêm vào giỏ",
+    "Type here to search products": "Tìm kiếm sản phẩm",
+    "Profile": "Thông tin người dùng",
+    "Update Information": "Cập nhật thông tin",
+    "Update Password": "Thay đổi mật khẩu",
+    "Cancel": "Hủy",
+    "Save changes": "Cập nhật",
+    "Your Orders": "Đơn hàng của bạn",
+    "You haven't ordered anything !": "Bạn chưa có đơn hàng nào !",
+    "Number": "Số thứ tự",
+    "Total Price": "Tổng giá tiền",
+    "Order At": "Ngày lên đơn",
+    "Status": "Trạng thái đơn",
+    "Detail": "Chi tiết",
+    "Canceled": "Đã hủy",
+    "Finished": "Đã hoàn thành",
+    "Transfering": "Đang vận chuyển",
+    "Processing": "Đang xử lý",
+    "See detail": "Chi tiết",
+    "Orders": "Đơn hàng",
+    "Language": "Ngôn ngữ",
+    "Confirm Your Infomation": "Xác nhận thông tin",
+    "Thank You - Your orders is being processed": "Cảm ơn quý khách, đơn hàng của quý khách đang được xử lý",
+    "Back To Home": "Quay trở lại"
 }
